add endpoint for toll free number to access

--- a/server_config.yml
+++ b/server_config.yml
@@ -3,6 +3,7 @@ leetcode_polling_interval: 300 # query LeetCode every 5 minutes
 port: 8000
 sqlite3_file_name: users.db
 local_timezone: America/Los_Angeles
+phone_script_update_interval: 1800 # update phone script every 30 minutes
 
 points:
   easy: 1
