--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./server_config.yml:/app/server_config.yml
       - ./requirements.txt:/app/requirements.txt
       - ./users.db:/app/users.db
-      - ./tmp:/app/tmp
+      - ./phone:/app/phone
     restart: unless-stopped
     environment:
       - PYTHONUNBUFFERED=1
