--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -2,7 +2,7 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y ffmpeg
+RUN apt-get update && apt-get install -y ffmpeg jq ssh
 
 COPY requirements.txt .
 
@@ -10,4 +10,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8080
 
-CMD ["python", "server.py", "--config", "server_config.yml"]
+ENTRYPOINT [ "./freak.sh" ]
